%% LLD DIAGRAM 1 - Database Schema

erDiagram
    TENANTS {
        uuid id PK
        varchar name
        varchar slug "UNIQUE"
        timestamp created_at
        timestamp updated_at
    }

    USERS {
        uuid id PK
        uuid tenant_id FK
        varchar email "UNIQUE per tenant"
        varchar password_hash
        varchar role "member or admin"
        timestamp created_at
        timestamp updated_at
    }

    TASKS {
        uuid id PK
        uuid tenant_id FK
        uuid user_id FK
        varchar title
        varchar description
        varchar status "todo, in_progress, done"
        varchar priority "low, medium, high"
        int position
        timestamp created_at
        timestamp updated_at
    }

    TENANTS ||--o{ USERS : "has many"
    TENANTS ||--o{ TASKS : "owns"
    USERS   ||--o{ TASKS : "assigned"
